# IPC

./: README.md
IPC/Component/: CMakeLists.txt
IPC/Component/Buffer/: CMakeLists.txt
IPC/Component/IpcMsg/: CMakeLists.txt
IPC/Component/IpcMsg/src/: IpcMsg.cpp  Socket.cpp  Socket.h
IPC/Component/Thread/: CMakeLists.txt
IPC/Component/include/Buffer/: Buffer.h
IPC/Component/include/IpcMsg/: IpcMsg.h
IPC/ControlProc/: CMakeLists.txt  ControlMain.cpp
IPC/DataCenterProc/: CMakeLists.txt  DcMain.cpp
